--- a/docker_image/Dockerfile
+++ b/docker_image/Dockerfile
@@ -3,11 +3,11 @@ FROM buildpack-deps:xenial
 ARG DEPS_SCRIPT_REVISION="56.0.2924.122"
 
 RUN set -ex; \
-    echo "deb http://archive.ubuntu.com/ubuntu/ xenial multiverse" >> /etc/apt/sources.list && \
-    echo "deb-src http://archive.ubuntu.com/ubuntu/ xenial multiverse" >> /etc/apt/sources.list && \
-    git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git /opt/depot_tools && \
     apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-        vim htop tree tmux sudo bash-completion apt-utils \
+        software-properties-common apt-utils && \
+    apt-add-repository -s multiverse && \
+    apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        vim htop tree tmux sudo bash-completion \
         ttf-mscorefonts-installer \
         g++-5-multilib-mipsel-linux-gnu \
         gcc-5-multilib-mipsel-linux-gnu \
@@ -17,9 +17,10 @@ RUN set -ex; \
         gcc-multilib-mipsel-linux-gnu && \
     curl "https://chromium.googlesource.com/chromium/src/+/$DEPS_SCRIPT_REVISION/build/install-build-deps.sh?format=TEXT" \
         | base64 -d > /tmp/install-build-deps.sh && chmod +x /tmp/install-build-deps.sh && \
-    /tmp/install-build-deps.sh --no-prompt --no-syms --no-arm --no-chromeos-fonts --no-nacl && \
+    /tmp/install-build-deps.sh --no-prompt --no-syms --lib32 --no-arm --no-chromeos-fonts && \
     useradd builder -m -s /bin/bash && echo "builder:builder" | chpasswd && \
     echo "builder ALL = (ALL) NOPASSWD: ALL" > /etc/sudoers.d/builder && \
+    git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git /opt/depot_tools && \
     chown -R builder:builder /opt/depot_tools
 
 ENV PATH="$PATH:/opt/depot_tools"
